--- a/zvit.html
+++ b/zvit.html
@@ -53,8 +53,8 @@
         <h2 class="my-4">Студента групи ІС-12 Бабича Михайла</h2>
     </div>
     <div class="btn-group">
-        <button class="btn btn-secondary active" href="#">Лабораторна робота №1</button>
-        <button class="btn btn-secondary" href="#">Лабораторна робота №2</button>
+        <button class="btn btn-warning active" href="#">Лабораторна робота №1</button>
+        <button class="btn btn-dangerous active" href="#">Лабораторна робота №2</button>
         <button class="btn btn-secondary" href="#">Лабораторна робота №3</button>
         <button class="btn btn-secondary" href="#">Лабораторна робота №4</button>
         <button class="btn btn-secondary" href="#">Лабораторна робота №5</button>
@@ -69,11 +69,11 @@
             <nav id="navbar-example3" class="navbar navbar-light bg-light">
                 <nav class="nav nav-pills flex-column">
                   <button class="nav-link btn btn-dark" href="#item-1" onclick="showText('1')">Опис предметного середовища</button>
-                  <button class="nav-link btn btn-dark" href="#item-2" onclick="showText('2')">Тема, мета місце розташування лаби №1</button>
+                  <button class="nav-link btn btn-dark" href="#item-2" onclick="showText('2')">Тема, мета місце розташування лаби №2</button>
                   <button class="nav-link btn btn-dark" href="#item-3" onclick="showText('3')">Структура документа</button>
                     <button class="nav-link btn btn-secondary" href="#item-3-1" onclick="showText('3-1')">HTML-код таблиць</button>
                     <button class="nav-link btn btn-secondary" href="#item-3-2" onclick="showText('3-2')">HTML-код форми</button>
-                    <button class="nav-link btn btn-secondary" href="#item-3-3" onclick="showText('3-3')">HTML-код зображення</button>
+                    <button class="nav-link btn btn-secondary" href="#item-3-3" onclick="showText('3-3')">CSS код</button>
                   <button class="nav-link btn btn-dark" href="#item-4" onclick="showText('4')">Висновки</button>
                 </nav>
             </nav>
@@ -169,27 +169,17 @@
                 </pre>
                 </div>
                 <div class="N 3-3">
-                    <img style="width: 953px; height: 442px;" src="bg.jpg">
-                    <pre>
-    &lt;style&gt;
-        body {
-            background: #d6d7d8;
-        }
-        #lending {
-            padding: 10%;
-            background-image: url('background2.jpg');
-            background-repeat: no-repeat;
-            background-size: 100% 100%;
-            font-family: 'Trebuchet MS', sans-serif;
-        }
-    &lt;/style&gt;
-                    </pre>
+                    <img style="width: 953px; height: 442px;" src="1css.png">
+                    <p>    </p>
+                    <p>    </p>
+                    <img style="width: 953px; height: 442px;" src="2css.png">
+                    <p>    </p>
+                    <p>    </p>
+                    <img style="width: 953px; height: 442px;" src="3css.png">
                 </div>
                 <div class="N 4">
                     <p>Отже, під час виконання лабораторної роботи були придбані практичні навички роботи з HTML-документом, 
-                    таблицями, зображеннями, посиланнями, списками та формами. А також створено шаблон звітного HTML-документу 
-                    для відображення результатів роботи всіх лабораторних робіт і створено HTML-код основної сторінки мого проекту: 
-                    веб-сервісу створення та вивчення флеш-карток.</p>
+                    таблицями, зображеннями, посиланнями, списками та формами. Та стилями СSS
                 </div>
             </div>
         </th>
